mile2/EvilParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 Evil.g 2010-04-16 01:41:59

   /* package declaration here */


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class EvilParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRUCT", "INT", "BOOL", "FUN", "VOID", "PRINT", "ENDL", "READ", "IF", "ELSE", "WHILE", "DELETE", "RETURN", "TRUE", "FALSE", "NEW", "NULL", "PROGRAM", "TYPES", "TYPE", "DECLS", "FUNCS", "DECL", "DECLLIST", "PARAMS", "RETTYPE", "BLOCK", "STMTS", "INVOKE", "ARGS", "NEG", "LBRACE", "RBRACE", "SEMI", "COMMA", "LPAREN", "RPAREN", "ASSIGN", "DOT", "AND", "OR", "EQ", "LT", "GT", "NE", "LE", "GE", "PLUS", "MINUS", "TIMES", "DIVIDE", "NOT", "ID", "INTEGER", "WS", "COMMENT"
    };
    public static final int LT=46;
    public static final int WHILE=14;
    public static final int LBRACE=35;
    public static final int STMTS=31;
    public static final int NEW=19;
    public static final int TYPES=22;
    public static final int NOT=55;
    public static final int ID=56;
    public static final int AND=43;
    public static final int EOF=-1;
    public static final int LPAREN=39;
    public static final int IF=12;
    public static final int TYPE=23;
    public static final int RETTYPE=29;
    public static final int RPAREN=40;
    public static final int DECLLIST=27;
    public static final int COMMA=38;
    public static final int RETURN=16;
    public static final int ARGS=33;
    public static final int PLUS=51;
    public static final int VOID=8;
    public static final int EQ=45;
    public static final int COMMENT=59;
    public static final int DOT=42;
    public static final int DIVIDE=54;
    public static final int NE=48;
    public static final int PARAMS=28;
    public static final int INTEGER=57;
    public static final int GE=50;
    public static final int RBRACE=36;
    public static final int NULL=20;
    public static final int ELSE=13;
    public static final int BOOL=6;
    public static final int STRUCT=4;
    public static final int INT=5;
    public static final int DELETE=15;
    public static final int MINUS=52;
    public static final int DECLS=24;
    public static final int TRUE=17;
    public static final int SEMI=37;
    public static final int PRINT=9;
    public static final int WS=58;
    public static final int ENDL=10;
    public static final int READ=11;
    public static final int DECL=26;
    public static final int BLOCK=30;
    public static final int OR=44;
    public static final int NEG=34;
    public static final int ASSIGN=41;
    public static final int GT=47;
    public static final int PROGRAM=21;
    public static final int FUNCS=25;
    public static final int TIMES=53;
    public static final int FUN=7;
    public static final int INVOKE=32;
    public static final int FALSE=18;
    public static final int LE=49;

    // delegates
    // delegators


        public EvilParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public EvilParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return EvilParser.tokenNames; }
    public String getGrammarFileName() { return "Evil.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // Evil.g:100:1: program : t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) ;
    public final EvilParser.program_return program() throws RecognitionException {
        EvilParser.program_return retval = new EvilParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF1=null;
        EvilParser.types_return t = null;

        EvilParser.declarations_return d = null;

        EvilParser.functions_return f = null;


        Object EOF1_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_functions=new RewriteRuleSubtreeStream(adaptor,"rule functions");
        RewriteRuleSubtreeStream stream_types=new RewriteRuleSubtreeStream(adaptor,"rule types");
        RewriteRuleSubtreeStream stream_declarations=new RewriteRuleSubtreeStream(adaptor,"rule declarations");
        try {
            // Evil.g:101:4: (t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) )
            // Evil.g:101:7: t= types d= declarations f= functions EOF
            {
            pushFollow(FOLLOW_types_in_program1043);
            t=types();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_types.add(t.getTree());
            pushFollow(FOLLOW_declarations_in_program1047);
            d=declarations();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_declarations.add(d.getTree());
            pushFollow(FOLLOW_functions_in_program1051);
            f=functions();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_functions.add(f.getTree());
            EOF1=(Token)match(input,EOF,FOLLOW_EOF_in_program1053); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF1);



            // AST REWRITE
            // elements: f, d, t
            // token labels: 
            // rule labels: f, retval, d, t
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_f=new RewriteRuleSubtreeStream(adaptor,"rule f",f!=null?f.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_d=new RewriteRuleSubtreeStream(adaptor,"rule d",d!=null?d.tree:null);
            RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.tree:null);

            root_0 = (Object)adaptor.nil();
            // 102:7: -> ^( PROGRAM $t $d $f)
            {
                // Evil.g:102:10: ^( PROGRAM $t $d $f)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                adaptor.addChild(root_1, stream_t.nextTree());
                adaptor.addChild(root_1, stream_d.nextTree());
                adaptor.addChild(root_1, stream_f.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class types_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "types"
    // Evil.g:104:1: types : ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES );
    public final EvilParser.types_return types() throws RecognitionException {
        EvilParser.types_return retval = new EvilParser.types_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        EvilParser.types_sub_return types_sub2 = null;


        RewriteRuleSubtreeStream stream_types_sub=new RewriteRuleSubtreeStream(adaptor,"rule types_sub");
        try {
            // Evil.g:105:4: ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES )
            int alt1=2;
            switch ( input.LA(1) ) {
            case STRUCT:
                {
                int LA1_1 = input.LA(2);

                if ( (synpred1_Evil()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 1, input);

                    throw nvae;
                }
                }
                break;
            case INT:
                {
                int LA1_2 = input.LA(2);

                if ( (synpred1_Evil()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 2, input);

                    throw nvae;
                }
                }
                break;
            case BOOL:
                {
                int LA1_3 = input.LA(2);

                if ( (synpred1_Evil()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 3, input);

                    throw nvae;
                }
                }
                break;
            case FUN:
                {
                int LA1_4 = input.LA(2);

                if ( (synpred1_Evil()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 4, input);

                    throw nvae;
                }
                }
                break;
            case EOF:
                {
                int LA1_5 = input.LA(2);

                if ( (synpred1_Evil()) ) {
                    alt1=1;
                }
                else if ( (true) ) {
                    alt1=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 5, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // Evil.g:105:7: ( STRUCT ID LBRACE )=> types_sub
                    {
                    pushFollow(FOLLOW_types_sub_in_types1099);
                    types_sub2=types_sub();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_types_sub.add(types_sub2.getTree());


                    // AST REWRITE
                    // elements: types_sub
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 105:39: -> ^( TYPES types_sub )
                    {
                        // Evil.g:105:42: ^( TYPES types_sub )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPES, "TYPES"), root_1);

                        adaptor.addChild(root_1, stream_types_sub.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // Evil.g:106:7: 
                    {

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 106:7: -> TYPES
                    {
                        adaptor.addChild(root_0, (Object)adaptor.create(TYPES, "TYPES"));

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "types"

    public static class types_sub_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "types_sub"
    // Evil.g:108:1: types_sub : ( ( STRUCT ID LBRACE )=> type_declaration types_sub | );
    public final EvilParser.types_sub_return types_sub() throws RecognitionException {
        EvilParser.types_sub_return retval = new EvilParser.types_sub_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        EvilParser.type_declaration_return type_declaration3 = null;

        EvilParser.types_sub_return types_sub4 = null;



        try {
            // Evil.g:109:4: ( ( STRUCT ID LBRACE )=> type_declaration types_sub | )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==STRUCT) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_3 = input.LA(3);

                    if ( (LA2_3==LBRACE) && (synpred2_Evil())) {
                        alt2=1;
                    }
                    else if ( (LA2_3==ID) ) {
                        alt2=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 3, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA2_0==EOF||(LA2_0>=INT && LA2_0<=FUN)) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // Evil.g:109:7: ( STRUCT ID LBRACE )=> type_declaration types_sub
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_type_declaration_in_types_sub1142);
                    type_declaration3=type_declaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, type_declaration3.getTree());
                    pushFollow(FOLLOW_types_sub_in_types_sub1144);
                    types_sub4=types_sub();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, types_sub4.getTree());

                    }
                    break;
                case 2 :
                    // Evil.g:111:4: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "types_sub"

    public static class type_declaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type_declaration"
    // Evil.g:112:1: type_declaration : STRUCT ID LBRACE nested_decl RBRACE SEMI ;
    public final EvilParser.type_declaration_return type_declaration() throws RecognitionException {
        EvilParser.type_declaration_return retval = new EvilParser.type_declaration_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token STRUCT5=null;
        Token ID6=null;
        Token LBRACE7=null;
        Token RBRACE9=null;
        Token SEMI10=null;
        EvilParser.nested_decl_return nested_decl8 = null;


        Object STRUCT5_tree=null;
        Object ID6_tree=null;
        Object LBRACE7_tree=null;
        Object RBRACE9_tree=null;
        Object SEMI10_tree=null;

        try {
            // Evil.g:113:4: ( STRUCT ID LBRACE nested_decl RBRACE SEMI )
            // Evil.g:113:7: STRUCT ID LBRACE nested_decl RBRACE SEMI
            {
            root_0 = (Object)adaptor.nil();

            STRUCT5=(Token)match(input,STRUCT,FOLLOW_STRUCT_in_type_declaration1164); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            STRUCT5_tree = (Object)adaptor.create(STRUCT5);
            root_0 = (Object)adaptor.becomeRoot(STRUCT5_tree, root_0);
            }
            ID6=(Token)match(input,ID,FOLLOW_ID_in_type_declaration1167); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID6_tree = (Object)adaptor.create(ID6);
            adaptor.addChild(root_0, ID6_tree);
            }
            LBRACE7=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_type_declaration1169); if (state.failed) return retval;
            pushFollow(FOLLOW_nested_decl_in_type_declaration1172);
            nested_decl8=nested_decl();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, nested_decl8.getTree());
            RBRACE9=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_type_declaration1174); if (state.failed) return retval;
            SEMI10=(Token)match(input,SEMI,FOLLOW_SEMI_in_type_declaration1177); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type_declaration"

    public static class nested_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "nested_decl"
    // Evil.g:115:1: nested_decl : ( decl SEMI )+ ;
    public final EvilParser.nested_decl_return nested_decl() throws RecognitionException {
        EvilParser.nested_decl_return retval = new EvilParser.nested_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMI12=null;
        EvilParser.decl_return decl11 = null;


        Object SEMI12_tree=null;

        try {
            // Evil.g:116:4: ( ( decl SEMI )+ )
            // Evil.g:116:7: ( decl SEMI )+
            {
            root_0 = (Object)adaptor.nil();

            // Evil.g:116:7: ( decl SEMI )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( ((LA3_0>=STRUCT && LA3_0<=BOOL)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Evil.g:116:8: decl SEMI
            	    {
            	    pushFollow(FOLLOW_decl_in_nested_decl1194);
            	    decl11=decl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, decl11.getTree());
            	    SEMI12=(Token)match(input,SEMI,FOLLOW_SEMI_in_nested_decl1196); if (state.failed) return retval;

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "nested_decl"

    public static class decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // Evil.g:118:1: decl : t= type i= ID -> ^( DECL ^( TYPE $t) $i) ;
    public final EvilParser.decl_return decl() throws RecognitionException {
        EvilParser.decl_return retval = new EvilParser.decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token i=null;
        EvilParser.type_return t = null;


        Object i_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // Evil.g:119:4: (t= type i= ID -> ^( DECL ^( TYPE $t) $i) )
            // Evil.g:119:7: t= type i= ID
            {
            pushFollow(FOLLOW_type_in_decl1216);
            t=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(t.getTree());
            i=(Token)match(input,ID,FOLLOW_ID_in_decl1220); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(i);



            // AST REWRITE
            // elements: t, i
            // token labels: i
            // rule labels: retval, t
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_i=new RewriteRuleTokenStream(adaptor,"token i",i);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.tree:null);

            root_0 = (Object)adaptor.nil();
            // 120:7: -> ^( DECL ^( TYPE $t) $i)
            {
                // Evil.g:120:10: ^( DECL ^( TYPE $t) $i)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECL, "DECL"), root_1);

                // Evil.g:120:17: ^( TYPE $t)
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPE, "TYPE"), root_2);

                adaptor.addChild(root_2, stream_t.nextTree());

                adaptor.addChild(root_1, root_2);
                }
                adaptor.addChild(root_1, stream_i.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // Evil.g:122:1: type : ( INT | BOOL | STRUCT ID );
    public final EvilParser.type_return type() throws RecognitionException {
        EvilParser.type_return retval = new EvilParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token INT13=null;
        Token BOOL14=null;
        Token STRUCT15=null;
        Token ID16=null;

        Object INT13_tree=null;
        Object BOOL14_tree=null;
        Object STRUCT15_tree=null;
        Object ID16_tree=null;

        try {
            // Evil.g:123:4: ( INT | BOOL | STRUCT ID )
            int alt4=3;
            switch ( input.LA(1) ) {
            case INT:
                {
                alt4=1;
                }
                break;
            case BOOL:
                {
                alt4=2;
                }
                break;
            case STRUCT:
                {
                alt4=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // Evil.g:123:7: INT
                    {
                    root_0 = (Object)adaptor.nil();

                    INT13=(Token)match(input,INT,FOLLOW_INT_in_type1257); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    INT13_tree = (Object)adaptor.create(INT13);
                    adaptor.addChild(root_0, INT13_tree);
                    }

                    }
                    break;
                case 2 :
                    // Evil.g:124:7: BOOL
                    {
                    root_0 = (Object)adaptor.nil();

                    BOOL14=(Token)match(input,BOOL,FOLLOW_BOOL_in_type1265); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    BOOL14_tree = (Object)adaptor.create(BOOL14);
                    adaptor.addChild(root_0, BOOL14_tree);
                    }

                    }
                    break;
                case 3 :
                    // Evil.g:125:7: STRUCT ID
                    {
                    root_0 = (Object)adaptor.nil();

                    STRUCT15=(Token)match(input,STRUCT,FOLLOW_STRUCT_in_type1273); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    STRUCT15_tree = (Object)adaptor.create(STRUCT15);
                    root_0 = (Object)adaptor.becomeRoot(STRUCT15_tree, root_0);
                    }
                    ID16=(Token)match(input,ID,FOLLOW_ID_in_type1276); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    ID16_tree = (Object)adaptor.create(ID16);
                    adaptor.addChild(root_0, ID16_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class declarations_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declarations"
    // Evil.g:127:1: declarations : ( declaration )* -> ^( DECLS ( declaration )* ) ;
    public final EvilParser.declarations_return declarations() throws RecognitionException {
        EvilParser.declarations_return retval = new EvilParser.declarations_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        EvilParser.declaration_return declaration17 = null;


        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try {
            // Evil.g:128:4: ( ( declaration )* -> ^( DECLS ( declaration )* ) )
            // Evil.g:128:7: ( declaration )*
            {
            // Evil.g:128:7: ( declaration )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);
